# CS433_Workspace

./: .gitignore  README.md
hw1/: .clang-format  CMakeLists.txt  README.md
hw1/benchmark/: hw1p1_benchmark.cpp  hw1p2_benchmark.cpp
hw1/include/: hw1p1.h  hw1p2.h
hw1/test/: hw1p1_test.cpp  hw1p2_test.cpp
hw2/: CMakeLists.txt  README.md  cuda_test.cu  report.md
hw2/benchmark/: hw1p1.cpp  hw1p2.cpp
hw2/include/: conv_cpu.h  conv_gpu.h
hw2/src/: __learn.cu  conv_cpu.cpp  conv_gpu.cu
hw2/test/: hw1p2.cpp  hw2p1.cpp  hw2p2.cpp
hw3/: .clang-format  .gitignore  Makefile  README.md  mpi_hello_world.c  p1_roundtrip_time_test.c  p2_pass_string.c
